# openbao-gui

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  contract-lab.yml  release.yml
docs/: DEPLOYMENT.md  SECURITY.md  TESTING.md
lab/: Download-OpenBao.ps1  README.md  Run-ContractTests.ps1
lab/mock-oidc/: Cargo.toml
lab/mock-oidc/src/: main.rs
ops/openbao/: northlake-users-mtls-pki-role.json  northlake-users-oidc-role.json  northlake-users-policy.hcl
scripts/: Start-MtlsTestSite.ps1  Stop-MtlsTestSite.ps1  assert-release-config.ps1  build-installer.ps1  check-prereqs.ps1  configure-deployment.ps1  write-checksums.ps1
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: deployment.example.json  deployment.json
src-tauri/src/: api.rs  certificates.rs  config.rs  error.rs  lib.rs  main.rs  redaction.rs  state.rs
