[package]
name = "openbao-certificate-client"
version = "0.1.0"
description = "Windows certificate enrollment client for OpenBao"
authors = ["OpenBao Certificate Client contributors"]
edition = "2021"
rust-version = "1.81"
license = "MPL-2.0"

[lib]
name = "openbao_certificate_client"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openbao-certificate-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
hex = "0.4"
open = "5"
pem = "3"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
semver = "1"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
x509-parser = { version = "0.18", features = ["verify"] }
