[package]
name = "openbao-mock-oidc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
base64 = "0.22"
jsonwebtoken = "9"
rand = "0.8"
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
